# flexus

./: .clang-format  .gitignore  CMakeLists.txt  Configuration.cmake
components/BPWarm/: BPWarmImpl.cpp
components/CMPCache/: AbstractArray.hpp  AbstractDirectory.hpp  AbstractPolicy.hpp  AbstractRegionDirectory.hpp  CMPCacheController.cpp  CMPCacheImpl.cpp  CacheBuffers.hpp  CacheState.hpp  EvictBuffer.hpp  InfiniteDirectory.hpp  NonInclusiveMESIPolicy.cpp  RTArray.hpp  SimpleDirectoryState.hpp  StdArray.hpp  TaglessDirectory.hpp
components/Cache/: AbstractArray.hpp  BaseCacheControllerImpl.cpp  BaseCacheControllerImpl.hpp  BasicCacheState.hpp  CacheBuffers.hpp  CacheController.cpp  CacheController.hpp  CacheImpl.cpp  InclusiveMESI.cpp  InclusiveMOESI.cpp  RTArray.hpp  StdArray.hpp  TaglessInclusiveMOESI.cpp
components/CommonQEMU/: AbstractFactory.hpp  BranchPredictor.cpp  MessageQueues.hpp  OneWayMuxImpl.cpp  Serializers.hpp  SetAssocArray.hpp  SetAssocLookupResult.hpp  SetAssocReplacement.hpp  SetAssocSetDefn.hpp  SetAssocTypes.hpp  TraceTracker.cpp  TransactionTracker.cpp  TypeSafeEnum.hpp  Util.hpp  seq_map.hpp
components/DecoupledFeederQEMU/: DecoupledFeederImpl.cpp  QemuTracer.cpp
components/FastCMPCache/: AbstractCache.hpp  AbstractDirectory.hpp  AbstractFactory.hpp  FastCMPCacheImpl.cpp  InfiniteDirectory.cpp  RTCache.hpp  SharingVector.hpp  SingleCMPProtocol.cpp  StandardDirectory.cpp  StdCache.hpp  TaglessDirectory.cpp  TaglessDirectory.hpp
components/FastCache/: AbstractCache.hpp  CoherenceProtocol.hpp  FastCacheImpl.cpp  RTCache.hpp  StdCache.hpp
components/FetchAddressGenerate/: FetchAddressGenerateImpl.cpp
components/MMU/: ARMTranslationGranules.hpp  MMUImpl.cpp  TTResolvers.cpp  TTResolvers.hpp
components/MTManager/: MTManagerComponentImpl.cpp
components/MagicBreakQEMU/: MagicBreakImpl.cpp  breakpoint_tracker.cpp  breakpoint_tracker.hpp
components/MemoryMap/: MemoryMapImpl.cpp
components/MultiNic/: MultiNicXImpl.hpp
components/NetShim/: channel.cpp  channel.hpp  netcommon.hpp  netcontainer.cpp
components/SpatialPrefetcher/: seq_map.hpp
components/SplitDestinationMapper/: SplitDestinationMapperImpl.cpp
components/armDecoder/: Constraints.cpp  Effects.cpp  Effects.hpp  InstructionComponentBuffer.hpp  OperandMap.hpp  SemanticActions.hpp  SemanticInstruction.hpp  armInstruction.hpp
components/uArchARM/: BypassNetwork.hpp  RegisterFile.hpp  ValueTracker.hpp  microArch.cpp  microArch.hpp  systemRegister.cpp  systemRegister.hpp  uArchImpl.cpp  uArchInterfaces.hpp
components/uFetch/: LogTwoLookup.hpp  SimCache.cpp  SimCache.hpp  uFetchImpl.cpp  uFetchTypes.hpp
core/: MakeUniqueWrapper.hpp  component.hpp  component_interface.hpp  configuration.hpp  configuration_macros.hpp  drive.hpp  fast_alloc.cpp  fast_alloc.hpp  flexus.cpp  interface_macros.hpp  simulator_name.hpp  stats.hpp  transport.hpp  types.hpp
core/boost_extensions/: circular_buffer_fwd.hpp  intrusive_ptr.hpp  lexical_cast.hpp  member_function_traits.hpp  padded_string_cast.hpp  phoenix.hpp
core/components/: ComponentManager.cpp
core/debug/: action.cpp  control.hpp  filter.hpp  format.cpp  parser.cpp
core/qemu/: api_wrappers.cpp  configuration_api.cpp  configuration_api.hpp  mai_api.hpp  qmp_api.hpp  startup.cpp  trampoline.hpp
core/stats/: measurement.cpp  stats.cpp  (+1 more)
scripts/: clang_format_test.sh
stat-manager/: stat-collapse.cpp  stat-sample.cpp
(+51 files in other folders)
